# llm-zoomcamp

./: docker-compose.yaml  ground-truth.ipynb  helper.md  offline-rag-evaluation.ipynb  ollama.ipynb  pyproject.toml  rag-intro.ipynb  w1.ipynb  w3.ipynb
app/: app.py  assistant.py  db.py  docker-compose.yaml  generate_data.py  prep.py
rag-project-master/: docker-compose.yml
rag-project-master/llm/: requirements.txt
rag-project-master/llm/rager/data_exporters/: hypnotic_quantum.py  prismatic_umbra.py
rag-project-master/llm/rager/data_loaders/: synaptic_photon.py
rag-project-master/llm/rager/pipelines/planeswalker/: metadata.yaml
rag-project-master/llm/rager/transformers/: enigmatic_helix.py  supernatural_nimbus.py  transcendent_incantation.py
